# rust_barcode

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
ui/: main_window.slint
